--- a/service.html
+++ b/service.html
@@ -57,10 +57,10 @@
                             <label for="message" class="form-control-label">Message:</label>
                             <textarea class="form-control" id="message"></textarea>
                           </div>
-                          
+
                           <input type="button" class="btn btn-secondary" name="submit_id" id="btn_id" value="Get Your Quote!" onclick="submit_by_id()"/>
                           <input type="button" class="btn btn-secondary" name="close" data-dismiss="modal" value="Close" />
-                          
+
                         </form>
                       </div>
                     </div>
@@ -191,7 +191,9 @@
                   <li><i class="glyphicon glyphicon-time"></i>Sanatize and Dust </li>
                   <li><i class="glyphicon glyphicon-trash"></i>Sweep and Vaccum</li>
                 </ul>
-                <div class="pricing-footer"> <a href="#" class="btn db-button-color-square btn-lg">Learn More</a> </div>
+                <div class="pricing-footer">
+                  <a class="btn db-button-color-square btn-lg" href="#expressPop">Learn More</a>
+               </div>
               </div>
             </div>
           </div>
@@ -205,7 +207,9 @@
                   <li><i class="glyphicon glyphicon-time"></i>All Rooms & Bath </li>
                   <li><i class="glyphicon glyphicon-trash"></i>Hand Mop Floors</li>
                 </ul>
-                <div class="pricing-footer mid-pricing-footer"> <a href="#" class="btn db-button-color-square btn-lg">Learn More</a> </div>
+                <div class="pricing-footer mid-pricing-footer">
+                   <a class="btn db-button-color-square btn-lg" href="#basicPop">Learn More</a>
+                 </div>
               </div>
             </div>
           </div>
@@ -219,7 +223,9 @@
                   <li><i class="glyphicon glyphicon-time"></i>Freshen Linens </li>
                   <li><i class="glyphicon glyphicon-trash"></i>Customized Add-Ons</li>
                 </ul>
-                <div class="pricing-footer"> <a href="#" class="btn db-button-color-square btn-lg">Learn More</a> </div>
+                <div class="pricing-footer">
+                  <a class="btn db-button-color-square btn-lg" href="#deepPop">Learn More</a>
+                </div>
               </div>
             </div>
           </div>
@@ -248,6 +254,90 @@
     </div>
     <!--Pricing and Plans End-->
 
+    <!--Express Pricing Popup -->
+  <div class="boxy">
+    <div id="expressPop" class="expressOverlay">
+      <div class="expressPopup">
+        <h2 class="popupHead">Express Cleaning Package</h2>
+          <a class="close" href="#">&times;</a>
+        <div class="expressContent">
+            <h6>Quality and Professionalism</h6>
+              <p>Our professional cleaning specialist will tackle dirt, dust and grime and leave your home shining. We provide a variety of residential and commercial office cleaning services throughout the city of Louisville and Southern Indiana areas. Express Cleaning System and unique cleaning process provide customers an affordable line of unmatched home cleaning services.</p>
+            <h6>Express Cleaning Package </h6>
+              <p>Our Express Cleaning Package includes a declutter, sanitize and dust, and sweep and vacuum as well as all hard floors being hand mopped. This is our preferred maintenance package with our regular clients. With the Express Cleaning package you will get:</p>
+              <ul>
+                <li>Up to 3 Bedrooms and 2 Bathrooms for $55 </li>
+                <li>Up to 5 Bedrooms and 3 Bathrooms for $65 </li>
+              </ul>
+              <p>Additional Bedrooms or Bathrooms $5 per room </p>
+            <h6>Call Clean Bee Today to Learn More </h6>
+              <p>  We offer regular, daily, weekly, bi-weekly (every-other-week), monthly, seasonal and one-time project cleans for your home. Give us a call and request an estimate to begin service.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!--Express Pricing Popup End -->
+
+    <!--Basic Pricing Popup -->
+  <div class="boxy">
+    <div id="basicPop" class="basicOverlay">
+      <div class="basicPopup">
+        <h2 class="popupHead">Basic Cleaning Package</h2>
+          <a class="close" href="#">&times;</a>
+        <div class="basicContent">
+            <h6>Quality and Professionalism</h6>
+              <p>Our professional cleaning specialist will tackle dirt, dust and grime and leave your home shining. We provide a variety of residential and commercial office cleaning services throughout the city of Louisville and Southern Indiana areas. Basic Cleaning System and unique cleaning process provide customers an affordable line of unmatched home cleaning services.</p>
+            <h6>Basic Cleaning Package</h6>
+              <p>Our Basic Cleaning Package includes a declutter, sanitize and dust, and sweep and vacuum as well as all hard floors being hand mopped. This is our preferred maintenance package with our regular clients. With the Basic Cleaning package you will get:</p>
+              <ul>
+                  <li>1 Bedroom 1 Bathroom for $ 60</li>
+                  <li>2 Bedroom 1 Bathroom for $ 65</li>
+                  <li>2 Bedroom 2 Bathroom for $ 70</li>
+                  <li>3 Bedroom 1-2 Bathroom for $ 75</li>
+                  <li>4 Bedroom 1-2 Bathroom for $ 80</li>
+                  <li>4 Bedroom 3-4 Bathroom for $ 85</li>
+                  <li>5 Bedroom 2-3 Bathroom for $90</li>
+                  <li>5 Bedroom 4-5 Bathroom for $ 95</li>
+              </ul>
+              <p>Additional Bedrooms or Bathrooms $5 per room </p>
+            <h6>Call Clean Bee Today to Learn More </h6>
+              <p>We offer regular, daily, weekly, bi-weekly (every-other-week), monthly, seasonal and one-time project cleans for your home. Give us a call and request an estimate to begin service.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!--Basic Pricing Popup End -->
+
+    <!--Deep Pricing Popup -->
+  <div class="boxy">
+    <div id="deepPop" class="deepOverlay">
+      <div class="deepPopup">
+        <h2 class="popupHead">Deep Cleaning Package</h2>
+          <a class="close" href="#">&times;</a>
+        <div class="deepContent">
+            <h6>Quality and Professionalism</h6>
+              <p>Our professional cleaning specialist will tackle dirt, dust and grime and leave your home shining. We provide a variety of residential and commercial office cleaning services throughout the city of Louisville and Southern Indiana areas. Deep Cleaning System and unique cleaning process provide customers an affordable line of unmatched home cleaning services.</p>
+            <h6>Deep Cleaning Package</h6>
+              <p>Our Deep Cleaning Package includes a declutter, sanitize and dust, and sweep and vacuum as well as all hard floors being hand mopped. The package also includes linen freshening, carpet freshening, and upholstery freshening. Customized add-ons based on your needs are also included to ensure your home, apartment, or office is deeply cleaned. This is the best package for our new and occasional clients. With the Deep Cleaning package you will get:</p>
+              <ul>
+                <li>1 Bedroom 1 Bathroom for $100</li>
+                <li>2 Bedroom 1 Bathroom for $110</li>
+                <li>2 Bedroom 2 Bathroom for $120</li>
+                <li>3 Bedroom 1-2 Bathroom for $130</li>
+                <li>4 Bedroom 1-2 Bathroom for $140</li>
+                <li>4 Bedroom 3-4 Bathroom for $150</li>
+                <li>5 Bedroom 2-3 Bathroom for $160</li>
+                <li>5 Bedroom 4-5 Bathroom for $170</li>
+              </ul>
+              <p> Additional Bedrooms or Bathrooms $10 per room </p>
+            <h6>Call Clean Bee Today to Learn More </h6>
+              <p>  We offer regular, daily, weekly, bi-weekly (every-other-week), monthly, seasonal and one-time project cleans for your home. Give us a call and request an estimate to begin service.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!--Deep Pricing Popup End -->
+
 
       <!--Mobile Footer-->
         <footer>
@@ -261,7 +351,7 @@
                   <ul class="address">
                         <span>Contact</span>
                         <li>
-                          <b>Phone:</b> 555-555-5555
+                          <b>Phone:</b> 502-249-3765
                         </li>
                         <li>
                            <b>Hours:</b> Open Mon-Sat. 9am-9pm
